--- a/client/src/app/pages/products/products.component.html
+++ b/client/src/app/pages/products/products.component.html
@@ -1,1 +1,11 @@
-<p>products works!</p>
+<div class="content">
+    <h4 class="text-center" style="padding-top: 10px;">{{title}}</h4>
+    <div class="row">
+        <div class="col-md-5">
+            <app-product></app-product>
+        </div>
+        <div class="col-md-7 text-center">
+            <app-product-list></app-product-list>
+        </div>
+    </div>
+</div>
