--- a/client/src/app/pages/products/product/product.component.html
+++ b/client/src/app/pages/products/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="card mt-5">
     <div class="card-body">
         <h6 class="text-center">Products</h6>
-        <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
+        <form autocomplete="off" #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
             <input type="hidden" name="$key" #$key="ngModel" [(ngModel)]="productService.selectedProduct.$key">
             <div class="form-group">
                 <input type="text" name="name" class="form-control" #name="ngModel"
