--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -18,12 +18,13 @@
     </button>
     <div class=" navbar-collapse" [ngbCollapse]="isCollapsed" id="navigation">
       <ul class=" navbar-nav ml-auto">
-        <li class=" search-bar input-group">
-          <button class=" btn btn-link" data-target="#searchModal" data-toggle="modal" (click)="open(content)"
+        <li class=" search-bar input-group mt-2">
+          <!-- <button class=" btn btn-link" data-target="#searchModal" data-toggle="modal" (click)="open(content)"
             id="search-button">
             <i class=" tim-icons icon-zoom-split"> </i>
             <span class=" d-lg-none d-md-block"> Search </span>
-          </button>
+          </button> -->
+          {{userInfo?.username}}
         </li>
         <li class=" nav-item" ngbDropdown>
           <a class=" nav-link" data-toggle="dropdown" href="javascript:void(0)" ngbDropdownToggle>
@@ -31,11 +32,11 @@
               <img alt="Profile Photo" src="assets/img/anime3.png" />
             </div>
             <b class=" caret d-none d-lg-block d-xl-block"> </b>
-            <p class=" d-lg-none">Log out</p>
+            <p class=" d-lg-none" (click)="logout()">Log out</p>
           </a>
           <ul class=" dropdown-navbar" ngbDropdownMenu>
             <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
+              <a class=" nav-item" (click)="logout()" href="javascript:void(0)" ngbDropdownItem>
                 Log out
               </a>
             </li>
