--- a/client/src/app/pages/products/products.component.html
+++ b/client/src/app/pages/products/products.component.html
@@ -1,6 +1,13 @@
 <div class="content">
     <h4 class="text-center" style="padding-top: 10px;">{{title}}</h4>
     <div class="row">
+        <div class="col-md-12 float-right">
+            <input id="file" type="file" (change)="addfile($event)"
+                accept=".csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
+            <label for="file">Upload Excel File</label>
+        </div>
+    </div>
+    <div class="row">
         <div [ngClass]="{'col-md-5': productList.length > 0,
             'col-md-12': productList.length === 0}">
             <app-product></app-product>
