--- a/client/src/assets/scss/black-dashboard/custom/_tables.scss
+++ b/client/src/assets/scss/black-dashboard/custom/_tables.scss
@@ -189,3 +189,11 @@ table.tablesorter thead tr .headerSortDown {
     font-size: 10px;
   }
 }
+mat-paginator.mat-paginator {
+    /* background-color: red; */
+    background-image: linear-gradient(to bottom left, #344675, #263148, #344675);
+    color: white;
+}
+.mat-select-value {
+    color: white;
+}
