Done - Vendor API and client

--- a/client/src/app/pages/categories/category-list/category-list.component.html
+++ b/client/src/app/pages/categories/category-list/category-list.component.html
@@ -11,7 +11,7 @@
                         </a>
                     </td>
                     <td>
-                        <a class="btn btn-danger text-white" (click)="onDelete(category.$key)">
+                        <a class="btn btn-danger text-white" (click)="onDelete(category.id)">
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </td>
