--- a/client/src/app/pages/customers/customer-list/customer-list.component.html
+++ b/client/src/app/pages/customers/customer-list/customer-list.component.html
@@ -13,7 +13,7 @@
                         </a>
                     </td>
                     <td>
-                        <a class="btn btn-danger text-white" (click)="onDelete(customer.$key)">
+                        <a class="btn btn-danger text-white" (click)="onDelete(customer.id)">
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </td>
