--- a/client/src/app/pages/invoices/invoice-list/invoice-list.component.html
+++ b/client/src/app/pages/invoices/invoice-list/invoice-list.component.html
@@ -25,7 +25,7 @@
               </li>
             </td>
             <td>
-              <a class="btn btn-danger text-white" (click)="onDelete(invoice.$key)">
+              <a class="btn btn-danger text-white" (click)="onDelete(invoice.id)">
                 <i class="fas fa-trash-alt"></i>
               </a>
             </td>
