--- a/client/src/app/pages/products/product-list/product-list.component.html
+++ b/client/src/app/pages/products/product-list/product-list.component.html
@@ -19,10 +19,10 @@
                         <a class=" btn btn-secondary text-white mr-2" (click)="onEdit(product)">
                             <i class="far fa-edit"></i>
                         </a>
-                        <a class="btn btn-danger text-white mr-2" (click)="onDelete(product.$key)">
+                        <a class="btn btn-danger text-white mr-2" (click)="onDelete(product.id)">
                             <i class="fas fa-trash-alt"></i>
                         </a>
-                        <a class="btn btn-primary text-white" (click)="onDelete(product.$key)">
+                        <a class="btn btn-primary text-white" (click)="onDelete(product.id)">
                             <i class="fa fa-eye"></i>
                         </a>
                     </td>
