--- a/client/src/app/pages/categories/category/category.component.html
+++ b/client/src/app/pages/categories/category/category.component.html
@@ -4,16 +4,35 @@
         <form autocomplete="off" #categoryForm="ngForm" (ngSubmit)="onSubmit(categoryForm)">
             <input type="hidden" name="id" #id="ngModel" [(ngModel)]="categoryService.selectedCategory.id">
             <div class="form-group">
-                <input type="text" name="name" class="form-control" #name="ngModel"
-                    [(ngModel)]="categoryService.selectedCategory.name" placeholder="Add Category Name">
+                <input required type="text" name="name" class="form-control" #name="ngModel"
+                    [(ngModel)]="categoryService.selectedCategory.name" placeholder="Add Category Name*">
+                <div *ngIf="name.invalid && (name.dirty || name.touched)" class="mt-2 alert alert-danger">
+                    <div *ngIf="name.errors.required">
+                        Error - name is required.
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-                <input type="text" name="description" class="form-control" #description="ngModel"
-                    [(ngModel)]="categoryService.selectedCategory.description" placeholder="Add Category Description">
+                <input required type="text" name="description" class="form-control" #description="ngModel"
+                    [(ngModel)]="categoryService.selectedCategory.description" placeholder="Add Category Description*">
+                <div *ngIf="description.invalid && (description.dirty || description.touched)"
+                    class="mt-2 alert alert-danger">
+                    <div *ngIf="description.errors.required">
+                        Error - description is required.
+                    </div>
+                </div>
+            </div>
+            <div class="form-group" *ngIf="categoryForm.value.id">
+                <select name="is_active" #is_active="ngModel" class="bg-danger form-control w-100 form-control-lg"
+                    [(ngModel)]="categoryService.selectedCategory.is_active">
+                    <option value="1">Active</option>
+                    <option value="0">In Active</option>
+                </select>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-plus-circle"></i> Add
+                <!-- {{categoryService.selectedCategory | json}} -->
+                <button class="btn btn-primary" [disabled]="!categoryForm.valid" type="submit">
+                    <i class="fas fa-plus-circle"></i> {{categoryForm.value.id ? 'Update': 'Add'}}
                 </button>
                 <button class="btn btn-secondary" type="reset" (click)="resetForm(categoryForm)">
                     <i class="fas fa-sync-alt"></i> Reset
