--- a/client/src/app/pages/invoices/invoice/invoice.component.html
+++ b/client/src/app/pages/invoices/invoice/invoice.component.html
@@ -5,6 +5,7 @@
     </p>
     <h4 class="text-center">{{title}}</h4>
   </div>
+  {{form.value | json}}
   <form autocomplete="off" class="form-horizontal" [formGroup]="form" (ngSubmit)="saveProduct()" novalidate>
     <input type="hidden" formControlName="totalPrice">
     <div class="row">
@@ -19,10 +20,10 @@
           <div class="card-body text-info">
             <div class="form-row">
               <div class="col-md-4">
-                <select class="form-control custom-select" id="customer" formControlName="customer"
+                <select class="bg-info form-control" id="customer" formControlName="customer"
                   (ngModelChange)="getSelectedOptionText($event)">
                   <option [ngValue]="true">-Customer-</option>
-                  <option *ngFor="let item of customerList" [ngValue]="item">{{item.name}} {{item.lastname}}</option>
+                  <option *ngFor="let item of customerList" [ngValue]="item">{{item?.f_name}} {{item?.l_name}}</option>
                 </select>
               </div>
               <div class="col-md-4 ">
@@ -39,7 +40,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="phoneCustomer" class="row">
+    <div [hidden]="!phoneCustomer" class="row">
       <div class="col-5">
         <div class="card border-warning ">
           <div class="card-header">
@@ -49,19 +50,30 @@
             </a>
           </div>
           <div class="card-body text-default ">
-
-            <a class="d-flex justify-content-between align-items-center col-10" style="cursor: pointer;"
-              *ngFor='let product of productList' (click)="addPurchase(product)">
-              <i class="fas fa-plus-circle text-info"></i>&nbsp; {{product.name}}&nbsp;
-              <span class="badge badge-primary badge-outlined col-2">{{money(product.price)}}</span>
-              <hr style="border-width: 1px 0; color: black">
-            </a>
-
+            <input type="text" name="name" class="mb-2 form-control" #name="ngModel" [(ngModel)]="productSearch"
+              [ngModelOptions]="{standalone: true}" placeholder="Search">
+            <div class="border-bottom p-1 border-light row" style="cursor: pointer;"
+              *ngFor="let product of  obs | async | search:'name':productSearch:productList"
+              (click)="addPurchase(product)">
+              <div class="col-lg-1">
+                <i class="fas fa-plus-circle text-info mr-5"></i>
+              </div>
+              <div class="col-lg-7">
+                <span style="font-size: 20px;" class="text-white mr-5">
+                  {{product?.name}}
+                </span>
+              </div>
+              <div class="col-lg-4 pt-1">
+                <span style="font-size: 20px;" class="badge badge-primary badge-outlined">
+                  {{money(product.price_per_unit)}}</span>
+              </div>
+            </div>
+            <hr style="border-width: 1px 0; color: black">
           </div>
-
+          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
         </div>
       </div>
-      <div *ngIf="showDiv ==true" class="col-7">
+      <div *ngIf="showDiv" class="col-7">
         <div class="card border-success ">
           <div class="card-header text-primary">
             <strong>
@@ -82,7 +94,8 @@
                     </button>
                   </small>
                   <h5 class="mb-1 text-info">{{purchase.get('product').value.name}}</h5>
-                  <small class="text-warning">Product Price: {{money(purchase.get('product').value.price)}}</small>
+                  <small class="text-warning">Product Price:
+                    {{money(purchase.get('product').value.price_per_unit)}}</small>
                 </div>
                 <p class="mb-1">
                   <input type="number" formControlName="quantity" class="form-control form-control-sm">
