--- a/client/src/app/pages/products/products.component.html
+++ b/client/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <h4 class="text-center" style="padding-top: 10px;">{{title}}</h4>
+    <!-- <h4 class="text-center" style="padding-top: 10px;">{{title}}</h4> -->
     <div class="row">
         <div class="col-md-12 float-right">
             <input id="file" type="file" (change)="addfile($event)"
