Product history done

--- a/client/projects/invoice-modal/src/lib/invoice-modal.component.scss
+++ b/client/projects/invoice-modal/src/lib/invoice-modal.component.scss
@@ -162,3 +162,6 @@
 	right: 8px;
 	opacity: 0.6;
 }
+.modal-container.p-history{
+    background: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%) !important;
+}
